# MVPJewelryAgent

./: .gitignore  AGENT.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_llm_provider_config.py  0003_add_user_password_hash.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  health.py
backend/app/api/v1/admin/: __init__.py  llm_config.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  admin_operation_log.py  admin_review.py  ai_call_log.py  ai_report.py  case.py  case_file.py  import_job.py  knowledge_file.py  llm_provider_config.py  membership.py  ocr_result.py  sms_code.py  token_quota.py  user.py
backend/app/integrations/: __init__.py
backend/app/integrations/ai/: __init__.py  azure_openai_client.py  client.py  dashscope_client.py  encryption.py  factory.py
backend/app/middleware/: envelope.py  error_handler.py  request_id.py
backend/app/schemas/: __init__.py  auth.py  envelope.py  llm_config.py  report.py
backend/app/services/: __init__.py  auth_service.py  llm_config_service.py  report_service.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_alembic.py  test_auth.py  test_crop_report.py  test_envelope.py  test_health.py  test_health_db.py  test_llm_client.py  test_llm_config_api.py  test_models_smoke.py  test_report_schemas.py  test_request_id.py
docs/: Backend-Architecture_v0.1.md  Backend-Database-Schema_v0.1.md  Backend-Deployment-Guide_v0.1.md  Backend-Security-Checklist_v0.1.md  Product-Spec_v0.4.md  Technical-Spec_v0.1.md  UI-Spec_v0.3.1.md  roadmap.md
docs/discussions/: M4-backend-rollout-tracker.md  M4-materials-acquisition-workpack.md
docs/milestones/: M1-foundation.md  M2-user-pages.md  M4-real-backend.md
skills/: ai-integration-engineer.md  backend-engineer.md  frontend-engineer.md  product-manager.md  ui-ux-designer.md
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(admin)/: layout.tsx
web/app/(admin)/admin/llm-config/: page.tsx
web/app/(auth)/: layout.tsx
web/app/(auth)/login/: login-form.tsx  page.tsx
web/app/(dev)/dev/components/: page.tsx
web/app/(user)/: layout.tsx
web/app/(user)/cases/: page.tsx
web/app/(user)/cases/[id]/: copy-report-button.tsx  page.tsx
web/app/(user)/cases/[id]/customer-brief/: copy-brief-button.tsx  page.tsx
web/app/(user)/cases/[id]/ocr/: ocr-editor.tsx  page.tsx
web/app/(user)/cases/new/: new-case-wizard.tsx  page.tsx
web/app/(user)/dashboard/: page.tsx
web/app/(user)/me/: page.tsx
web/app/(user)/membership/: page.tsx
web/app/api/admin/llm-config/: route.ts
web/app/api/admin/status/: route.ts
web/app/api/admin/users/: route.ts
web/app/api/auth/admin-login/: route.ts
web/app/api/auth/login/: route.ts
web/app/api/auth/logout/: route.ts
web/app/api/auth/me/: route.ts
web/app/api/cases/: route.ts
web/app/api/cases/[id]/: route.ts
web/app/api/customer-brief/[caseId]/: route.ts
web/app/api/memberships/: route.ts
web/app/api/ocr/[caseId]/: route.ts
web/app/api/reports/[caseId]/: route.ts
web/components/admin/: admin-sidebar.tsx  llm-config-form.tsx
web/components/layout/: logout-button.tsx  mock-mode-floater.tsx  top-nav.tsx
web/components/ui/: button.tsx
web/components/yaoqi/: brand-logo.tsx  disclaimer-note.tsx  index.ts  locked-card.tsx  mobile-bottom-nav.tsx  mock-badge.tsx  status-bar.tsx  watermark-image.tsx  wizard-stepper.tsx
web/lib/: api-client.ts  api-server.ts  auth.ts  case-labels.ts  membership.ts
web/lib/mock/: admin-status.json  cases.json  llm-config.json  memberships.json  ocr-results.json  reports.json  users.json
web/lib/types/: domain.ts
