[project]
name = "yaoqi-backend"
version = "0.1.0"
description = "YAOQI 玉石珠宝鉴定估价助手 — backend (FastAPI)"
requires-python = "==3.12.*"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23.0,<24.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "structlog>=24.4,<25.0",
    "python-multipart>=0.0.12",
    # Stage 2: persistence layer.
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",
    "pgvector>=0.3.6,<0.4",
    # Stage 4: LLM integration (DashScope 兼容 + Azure OpenAI).
    "openai>=1.40,<2.0",
    "cryptography>=43.0,<44.0",
    # Stage 4: Auth (JWT + password hashing).
    "pyjwt>=2.8,<3.0",
    "bcrypt>=4.0,<6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
    # Stage 2: real-Postgres integration tests; pulls Docker via docker-py.
    "testcontainers[postgres]>=4.8,<5.0",
    # Stage 4: mock HTTP for LLM adapter tests.
    "respx>=0.21,<0.22",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",                                # line-length handled by formatter
    "B008",                                # FastAPI Depends() in function defaults is the standard pattern
    "RUF001", "RUF002", "RUF003",          # 中文文档/注释里 × ÷ → ≥ 等数学符号是刻意的(AGENT.md 注释即文档)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
exclude = ["alembic/versions/", "tests/"]

[[tool.mypy.overrides]]
module = ["structlog.*", "pgvector.*", "testcontainers.*", "openai.*", "cryptography.*", "respx.*", "jwt.*", "bcrypt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:bcrypt.*",
    # FastAPI 0.115 + Pydantic 2.9 内部 TypeAdapter 处理 alias_generator 时会触发
    # UnsupportedFieldAttributeWarning,实际 alias 功能正常;属 FastAPI 兼容层 bug。
    "ignore::pydantic.warnings.UnsupportedFieldAttributeWarning",
    # docker-py 在 colima socket 上偶发未关闭 socket 的 ResourceWarning,
    # 与被测代码无关 —— 静默,避免噪音掩盖真问题
    "ignore::ResourceWarning:docker.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
